--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "browsertest": "karma start",
     "test": "mocha",
-    "build": "webpack && copyfiles --flat @types/automerge/index.d.ts dist",
+    "build": "rollup -c && copyfiles --flat @types/automerge/index.d.ts dist",
     "prepublishOnly": "npm run-script build"
   },
   "author": "",
@@ -27,11 +27,10 @@
     "uuid": "^3.4.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.9.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
     "browserify": "^16.5.0",
     "copyfiles": "^2.2.0",
     "jsverify": "^0.8.4",
@@ -44,13 +43,12 @@
     "karma-sauce-launcher": "^2.0.2",
     "karma-typescript": "^5.0.0",
     "mocha": "^7.1.1",
+    "rollup": "^2.35.1",
     "sinon": "^9.0.1",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3",
-    "watchify": "^3.11.1",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "watchify": "^3.11.1"
   },
   "resolutions": {
     "karma-sauce-launcher/selenium-webdriver": "4.0.0-alpha.7"
